# ChangeLog for media-sound/amarokfs
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/amarokfs/ChangeLog,v 1.3 2007/02/21 09:17:20 opfer Exp $

  21 Feb 2007; Christian Faulhammer <opfer@gentoo.org>
  amarokfs-0.4.2.ebuild:
  added ~x86; bug 167812

  17 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> amarokfs-0.4.2.ebuild:
  Add ~x86-fbsd keyword.

*amarokfs-0.4.2 (13 Feb 2007)

  13 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> +metadata.xml,
  +amarokfs-0.4.2.ebuild:
  Initial import, full screen frontend for Amarok.
