@@ -1,0 +1,3 @@
+MD5 28b7432fa9abfb0a2211940990b3945a 52641-amarokFS-0.5.tar.gz 373310
+RMD160 ea2052c4114c1db21e5f727bd9d3c96caddd97d4 52641-amarokFS-0.5.tar.gz 373310
+SHA256 52ee9b21d18b7d76999b25c1de3077d3f2ae774b18b8eca3d9605ceaf340cafc 52641-amarokFS-0.5.tar.gz 373310
