@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/amarokfs
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/amarokfs/ChangeLog,v 1.3 2007/02/21 09:17:20 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/amarokfs/ChangeLog,v 1.4 2007/03/20 23:08:25 genstef Exp $
+
+*amarokfs-0.5 (20 Mar 2007)
+
+  20 Mar 2007; <stefan@gentoo.org> +amarokfs-0.5.ebuild:
+  version bump thanks to Elias Probst <elias.probst@gmx.de> in bug 171463
 
   21 Feb 2007; Christian Faulhammer <opfer@gentoo.org>
   amarokfs-0.4.2.ebuild:
